--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,9 +1,9 @@
-<!Doctype html>
-<html lang=en>
-	<head>
-		<title> Number template </title>
-	</head>
-	<body>
+<!DOCTYPE html>
+<HTML lang="en">
+	<HEAD>
+		<TITLE>HBNB</TITLE>
+	</HEAD>
+	<BODY>
 		<H1> Number: {{ n }} </H1>
-	</body>
-</html>
+	</BODY>
+</HTML>
